<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Key Chain</string>

    <!-- Dialog title when no certificates were found -->
    <string name="title_no_certs">No certificates found</string>

    <!-- Dialog title when at least one certificate was found -->
    <string name="title_select_cert">Choose certificate</string>

    <!-- Used at top of dialog to identify requesting application -->
    <string name="requesting_application">The app %s has requested a certificate. Choosing a certificate will let the app use this identity with servers now and in the future.</string>

    <!-- Used at top of dialog to identify requesting server (may be host:port or just host)-->
    <string name="requesting_server">The app has identified the requesting server as %s, but you should only give the app access to the certificate if you trust the app.</string>

    <!-- Label of button to send the user to the CertInstaller to install a certificate (arguments are constants for .pfx and .p12) -->
    <string name="install_new_cert_message">You can install certificates from a PKCS#12 file with a %1$s or a %2$s extension located in external storage.</string>

    <!-- Label of button to send the user to the CertInstaller to install a certificate -->
    <string name="install_new_cert_button_label">Install</string>
    <string name="generate_new_cert_button_label">Generate</string>

    <!-- Label of button to send the allow the application certificate request -->
    <string name="allow_button">Allow</string>

    <!-- Label of button to send the deny the application certificate request -->
    <string name="deny_button">Deny</string>

    <string-array name="algorithms_array">
        <item>RSA</item>
        <item>DSA</item>
        <item>EC</item>
        <item>AES</item>
    </string-array>
    <string name="expiry_date">Expiry Date:</string>
    <string name="key_size">Key Size:</string>
    <string name="algorithm">Algorithm:</string>
    
    <string name="invalid_key_size">Invalid Key Size: <xliff:g id="error">%s</xliff:g></string>
    <string name="invalid_date">Invalid Date: <xliff:g id="error">%s</xliff:g></string>
    <string name="invalid_algorithm">Invalid Algorithm: <xliff:g id="error">%s</xliff:g></string>
    <string name="invalid_pow2">power of two required</string>
    <string name="invalid_past_date">date is in the past</string>
    
    <string name="generate_start">Generating\u2026</string>
    <string name="generate_keypair">Generating key pair\u2026</string>
    <string name="generate_secret">Generating secret key\u2026</string>
    <string name="generate_certificate">Generating certificate\u2026</string>
    <string name="credential_name">Certificate name:</string>
    <!-- toast message -->
    <string name="cert_is_added"><xliff:g id="credential">%s</xliff:g> is installed.</string>
    <string name="cert_not_saved">The certificate is not installed.</string>
    <!-- Message displayed when a user other than the owner on a multi-user system tries to
         install a certificate into the certificate store. [CHAR LIMIT=NONE] -->
    <string name="only_primary_user_allowed">Only the owner of this device may install certificates.</string>
    <string name="alias_in_use">This alias is already in use.</string>
    <string name="manageapp_label">Key Management</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="manage_keys">Manage Keys</string>
    <string name="add_key">Add Key</string>
    <string name="key_select">Select Key</string>
    <string name="key_select_description">Select which key to assign to this contact.</string>
    <string name="private_key">private key</string>
    <string name="secret_key">secret key (<xliff:g id="bits">%d</xliff:g> bit)</string>
    <string name="generate_dialog_title">Generate new key</string>
    <string name="keytype_select">Select key type ID</string>
    <string name="keytype_select_description">Specify the application defined key type ID used for looking up this key:</string>
    <string name="grant_key_access_title">Key Access</string>

    <string name="key_requesting_app">The app <xliff:g id="app">%s</xliff:g> has requested access to the key identified by <xliff:g id="alias">%s</xliff:g>. Granting access will let the app use this key without further notice.</string>
    <string name="key_assigned_contacts">They key is currently assigned to the following contacts:</string>
    <string name="export_error">Couldn\'t export key: <xliff:g id="error">%s</xliff:g>.</string>
    <string name="export_key_chooser">Choose app to handle exported key.</string>
</resources>
