<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dip" >

            <TextView android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:visibility="gone" />

            <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/algorithm" />
            <Spinner android:id="@+id/algorithm"
                    android:entries="@array/algorithms_array"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            
            <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credential_name" />
            <EditText android:id="@+id/credential_name"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext|flagNoExtractUi|flagForceAscii"
                    android:singleLine="True"/>
            
            <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/key_size" />
            <EditText android:id="@+id/key_size"
                    android:inputType="number"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="True"/>
            
            <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date" />
            <EditText android:id="@+id/expiry_date"
                    android:inputType="date"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="True"/>
        
        </LinearLayout>
        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:paddingStart="0dip"
                android:paddingEnd="0dip"
                android:measureWithLargestChild="true" >
            <Button android:id="@+id/cancel_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@android:string/cancel"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            <Button android:id="@+id/generate_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@android:string/ok"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
